--- a/package.json
+++ b/package.json
@@ -6,19 +6,51 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "format": "prettier --check --ignore-path .gitignore .",
+    "format:fix": "prettier --write --ignore-path .gitignore .",
+    "codegen": "graphql-codegen --require dotenv/config",
+    "storybook": "storybook dev -p 6006",
+    "build-storybook": "storybook build"
   },
   "dependencies": {
+    "@apollo/client": "^3.10.1",
+    "@apollo/experimental-nextjs-app-support": "^0.10.0",
+    "@fortawesome/react-fontawesome": "^0.2.0",
+    "@react-icons/all-files": "^4.1.0",
+    "clsx": "^2.1.1",
+    "graphql": "^16.8.1",
+    "lodash": "^4.17.21",
+    "next": "14.2.3",
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.2.3"
+    "react-icons": "^5.2.0"
   },
   "devDependencies": {
-    "typescript": "^5",
+    "@chromatic-com/storybook": "^1.3.3",
+    "@graphql-codegen/cli": "^5.0.2",
+    "@graphql-codegen/typescript": "^4.0.6",
+    "@graphql-codegen/typescript-operations": "^4.2.0",
+    "@graphql-codegen/typescript-react-apollo": "^4.3.0",
+    "@storybook/addon-docs": "^8.1.0-alpha.8",
+    "@storybook/addon-essentials": "^8.1.0-alpha.8",
+    "@storybook/addon-interactions": "^8.1.0-alpha.8",
+    "@storybook/addon-links": "^8.1.0-alpha.8",
+    "@storybook/addon-onboarding": "^8.1.0-alpha.8",
+    "@storybook/blocks": "^8.1.0-alpha.8",
+    "@storybook/nextjs": "^8.1.0-alpha.8",
+    "@storybook/react": "^8.1.0-alpha.8",
+    "@storybook/test": "^8.1.0-alpha.8",
+    "@types/lodash": "^4.17.1",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "cypress": "^13.8.1",
     "eslint": "^8",
-    "eslint-config-next": "14.2.3"
+    "eslint-config-next": "14.2.3",
+    "eslint-plugin-storybook": "^0.8.0",
+    "sass": "^1.76.0",
+    "storybook": "^8.1.0-alpha.8",
+    "typescript": "^5"
   }
 }
