--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,6 +1,19 @@
 {
-  "extends": [
-    "next/core-web-vitals",
-    "plugin:storybook/recommended"
-  ]
+  "extends": ["next", "prettier", "next/core-web-vitals", "plugin:storybook/recommended"],
+  "rules": {
+    "import/newline-after-import": ["error", { "count": 1 }],
+    "import/order": [
+      "error",
+      {
+        "groups": ["builtin", "external", "internal", "parent", "sibling", "index"],
+        "newlines-between": "always",
+        "alphabetize": {
+          "order": "asc",
+          "caseInsensitive": true
+        }
+      }
+    ],
+    // Enforce spaces inside import braces
+    "object-curly-spacing": ["error", "always"]
+  }
 }
