--- a/package.json
+++ b/package.json
@@ -46,9 +46,12 @@
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "cypress": "^13.8.1",
-    "eslint": "^8",
-    "eslint-config-next": "14.2.3",
+    "eslint": "^8.57.0",
+    "eslint-config-next": "^14.2.3",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-import": "^2.29.1",
     "eslint-plugin-storybook": "^0.8.0",
+    "prettier": "^3.2.5",
     "sass": "^1.76.0",
     "storybook": "^8.1.0-alpha.8",
     "typescript": "^5"
